@@ -11,6 +11,7 @@ Changes in progress
 - add-to-any: Added support for featured image (imatge resum) when sharing to facebook (Trello #1283)
 - xtec-booking: Improved colors for spaces and fixed max size of images (Trello #1420)
 - xtec-booking: Role teacher can no longer edit posts edited by admins or editors, but can still edit bookings (Trello #1421)
+- xtec-booking: Fixed some PHP warnings (Trello #1470)
 - xtec-ldap-login: Don't send e-mail when user password is updated
 - agora-functions: Moved Automatic creation of featured image (Imatge resum) from mu-common to agora-functions (Trello #1284)
 - mu-common: Allow external requests to gencat.cat from RSS
